MODEXPW-190 - users-in-app-update: Content update validator (#285)