@@ -2,7 +2,6 @@ package org.folio.dew.controller;
 
 import static java.lang.String.format;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
-import org.folio.dew.client.GroupClient;
 import static org.folio.dew.controller.ItemsContentUpdateTestData.REPLACE_WITH_ALLOWED_STATUS;
 import static org.folio.dew.controller.ItemsContentUpdateTestData.REPLACE_WITH_NOT_ALLOWED_STATUS;
 import static org.folio.dew.domain.dto.EntityType.ITEM;
@@ -18,12 +17,8 @@ import static org.folio.dew.domain.dto.UserContentUpdateAction.NameEnum.CLEAR_FI
 import static org.folio.dew.domain.dto.UserContentUpdateAction.NameEnum.FIND;
 import static org.folio.dew.domain.dto.UserContentUpdateAction.NameEnum.REPLACE_WITH;
 import static org.folio.dew.utils.Constants.CSV_EXTENSION;
-import static org.folio.dew.utils.Constants.FILE_NAME;
 import static org.folio.dew.utils.Constants.DATE_TIME_PATTERN;
-import org.folio.spring.DefaultFolioExecutionContext;
-import org.folio.spring.FolioModuleMetadata;
-import org.folio.spring.integration.XOkapiHeaders;
-import org.folio.spring.scope.FolioExecutionScopeExecutionContextManager;
+import static org.folio.dew.utils.Constants.FILE_NAME;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
@@ -50,14 +45,37 @@ import lombok.SneakyThrows;
 import org.apache.commons.io.FilenameUtils;
 import org.folio.de.entity.JobCommand;
 import org.folio.dew.BaseBatchTest;
+import org.folio.dew.client.GroupClient;
 import org.folio.dew.client.InventoryClient;
 import org.folio.dew.client.UserClient;
-import org.folio.dew.domain.dto.*;
+import org.folio.dew.domain.dto.EntityType;
+import org.folio.dew.domain.dto.ExportType;
+import org.folio.dew.domain.dto.IdentifierType;
+import org.folio.dew.domain.dto.InventoryItemStatus;
+import org.folio.dew.domain.dto.Item;
+import org.folio.dew.domain.dto.ItemCollection;
+import org.folio.dew.domain.dto.ItemContentUpdate;
+import org.folio.dew.domain.dto.ItemContentUpdateCollection;
+import org.folio.dew.domain.dto.JobParameterNames;
+import org.folio.dew.domain.dto.Metadata;
+import org.folio.dew.domain.dto.Personal;
+import org.folio.dew.domain.dto.User;
+import org.folio.dew.domain.dto.UserCollection;
+import org.folio.dew.domain.dto.UserContentUpdate;
+import org.folio.dew.domain.dto.UserContentUpdateAction;
+import org.folio.dew.domain.dto.UserContentUpdateCollection;
+import org.folio.dew.domain.dto.UserGroup;
+import org.folio.dew.domain.dto.UserGroupCollection;
 import org.folio.dew.error.BulkEditException;
 import org.folio.dew.repository.MinIOObjectStorageRepository;
 import org.folio.dew.service.BulkEditProcessingErrorsService;
 import org.folio.dew.service.BulkEditRollBackService;
 import org.folio.dew.service.JobCommandsReceiverService;
+import org.folio.dew.service.validation.UserContentUpdateInvalidTestData;
+import org.folio.spring.DefaultFolioExecutionContext;
+import org.folio.spring.FolioModuleMetadata;
+import org.folio.spring.integration.XOkapiHeaders;
+import org.folio.spring.scope.FolioExecutionScopeExecutionContextManager;
 import org.folio.tenant.domain.dto.Errors;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -81,17 +99,17 @@ import java.io.FileInputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.text.SimpleDateFormat;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.text.SimpleDateFormat;
-import java.util.List;
 
 class BulkEditControllerTest extends BaseBatchTest {
   private static final String UPLOAD_URL_TEMPLATE = "/bulk-edit/%s/upload";
@@ -970,11 +988,10 @@ class BulkEditControllerTest extends BaseBatchTest {
     assertThat(result.getResponse().getContentAsString(), equalTo("3"));
   }
 
-  @ParameterizedTest
-  @EnumSource(names = {"PATRON_GROUP", "EXPIRATION_DATE"})
-  @DisplayName("Post user content update with clear patron group and expiration date")
+  @Test
+  @DisplayName("Post user content update with clear expiration date")
   @SneakyThrows
-  void shouldClearUserExpirationDateButNotPatronGroup(UserContentUpdate.OptionEnum testData) {
+  void shouldClearUserExpirationDate() {
     when(userClient.getUserByQuery("barcode==\"123\"", 1))
       .thenReturn(new UserCollection().addUsersItem(new User().barcode("123").active(true).personal(new Personal().email("123@example.com"))
         .expirationDate(new Date()).patronGroup("3684a786-6671-4268-8ed0-9db82ebca60b")).totalRecords(1));
@@ -1020,26 +1037,18 @@ class BulkEditControllerTest extends BaseBatchTest {
 
     var updates = objectMapper.writeValueAsString(new UserContentUpdateCollection()
       .userContentUpdates(Collections.singletonList(new UserContentUpdate()
-        .option(testData)
+        .option(UserContentUpdate.OptionEnum.EXPIRATION_DATE)
         .actions(List.of(new UserContentUpdateAction().name(CLEAR_FIELD)))))
       .totalRecords(1));
 
-    try {
-      var responseContentUpdateUpload = mockMvc.perform(post(format(USERS_CONTENT_UPDATE_UPLOAD_URL_TEMPLATE, jobId))
+    var responseContentUpdateUpload = mockMvc.perform(post(format(USERS_CONTENT_UPDATE_UPLOAD_URL_TEMPLATE, jobId))
         .headers(defaultHeaders())
         .content(updates))
-        .andExpect(status().isOk())
-        .andReturn();
-      var actualUsers = objectMapper.readValue(responseContentUpdateUpload.getResponse().getContentAsString(),
-        UserCollection.class);
-      actualUsers.getUsers().forEach(u -> assertNull(u.getExpirationDate()));
-    } catch (Exception exc) {
-      mockMvc.perform(get(format(ERRORS_URL_TEMPLATE, jobId))
-        .headers(defaultHeaders())
-        .queryParam(LIMIT, String.valueOf(3)))
-        .andExpect(status().isOk())
-        .andExpect(content().json(Files.readString(Path.of(EXPECTED_ERRORS_FOR_CLEAR_PATRON_GROUP))));
-    }
+      .andExpect(status().isOk())
+      .andReturn();
+    var actualUsers = objectMapper.readValue(responseContentUpdateUpload.getResponse().getContentAsString(),
+      UserCollection.class);
+    actualUsers.getUsers().forEach(u -> assertNull(u.getExpirationDate()));
   }
 
   @Test
@@ -1133,7 +1142,7 @@ class BulkEditControllerTest extends BaseBatchTest {
   @Test
   @DisplayName("Post user content update to replace patron group and clear expiration date")
   @SneakyThrows
-  void shouldFindAndReplacePatronGroupAndClearExpirationDate() {
+  void shouldAndReplacePatronGroupAndClearExpirationDate() {
     when(userClient.getUserByQuery("barcode==\"123\"", 1))
       .thenReturn(new UserCollection().addUsersItem(new User().barcode("123").active(true).personal(new Personal().email("123@example1.com"))
         .expirationDate(new Date()).patronGroup("3684a786-6671-4268-8ed0-9db82ebca60b")).totalRecords(1));
@@ -1184,9 +1193,7 @@ class BulkEditControllerTest extends BaseBatchTest {
     var updates = objectMapper.writeValueAsString(new UserContentUpdateCollection()
       .userContentUpdates(List.of(new UserContentUpdate()
           .option(UserContentUpdate.OptionEnum.PATRON_GROUP)
-          .actions(List.of(
-            new UserContentUpdateAction().name(FIND).value("some group"),
-            new UserContentUpdateAction().name(REPLACE_WITH).value("some new group"))),
+          .actions(Collections.singletonList(new UserContentUpdateAction().name(REPLACE_WITH).value("some new group"))),
         new UserContentUpdate()
           .option(UserContentUpdate.OptionEnum.EXPIRATION_DATE)
           .actions(List.of(
@@ -1213,6 +1220,20 @@ class BulkEditControllerTest extends BaseBatchTest {
     assertEquals("COMPLETED", jobExecution.getStatus().name());
     assertEquals(Files.readString(Path.of(EXPECTED_USER_CONTENT_UPDATE_OUTPUT)), new String(minIOObjectStorageRepository.getObject
       (jobExecution.getJobParameters().getString(UPDATED_FILE_NAME)).readAllBytes()));
+  }
+
+  @ParameterizedTest
+  @EnumSource(UserContentUpdateInvalidTestData.class)
+  @DisplayName("Post invalid user content update - BAD_REQUEST")
+  @SneakyThrows
+  void shouldReturnBadRequestIfUserContentUpdateIsNotValid(UserContentUpdateInvalidTestData update) {
+    var updates = objectMapper.writeValueAsString(new UserContentUpdateCollection()
+      .userContentUpdates(Collections.singletonList(update.getUpdate()))
+      .totalRecords(1));
+    mockMvc.perform(post(format(USERS_CONTENT_UPDATE_UPLOAD_URL_TEMPLATE, UUID.randomUUID()))
+        .headers(defaultHeaders())
+        .content(updates))
+      .andExpect(status().isBadRequest());
   }
 
   private JobCommand createBulkEditJobRequest(UUID id, ExportType exportType, EntityType entityType, IdentifierType identifierType) {
